Fix remaining color contrast accessibility issues
While I was at it, I tweakd a couple of other styles to use theme
variables.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -2,14 +2,14 @@
   article img {
     max-width: 100%;
     height: auto;
-    border: 1px solid #ccc;
-    border-radius: 3px;
+    border: 1px solid var(--ifm-toc-border-color);
+    border-radius: var(--ifm-global-radius);
   }
 
   article img + em {
     font-style: normal;
-    font-size: smaller;
-    opacity: 0.7;
+    font-size: 0.8em;
+    font-weight: 300;
   }
 
   article table img {
